--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,8 +26,12 @@ min-width: 320px;
 body.menu-active {
 overflow: hidden; }
 body.menu-active .btn-menu {
-background: url("/img/ico/ico-close.png") center center no-repeat;
--webkit-tap-highlight-color: transparent; }
+background: url('/img/ico/ico-close.png') center center no-repeat;
+-webkit-tap-highlight-color: transparent;
+display: inline-block;
+width: 28px;
+height: 28px;
+margin: 0 26px 0 3px; }
 body.popup-active { overflow-y: hidden; }
 h1 {
 margin: 19px auto 10px;
@@ -36,6 +40,7 @@ font-size: 24px;
 text-align: center;
 color: #1d1a1b;
 }
+a {text-decoration: none;}
 ol, ul {
 list-style: none; }
 blockquote, q {
@@ -52,10 +57,80 @@ border-spacing: 0; }
 * {
 box-sizing: border-box;
 font-family: 'Roboto', sans-serif; }
+.bonuses-holder {
+margin-bottom: -15px;
+}
+.denycountry {
+padding: 20px;
+width: 100%;
+max-width: 600px;
+position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+margin: auto;
+}
+#openchat { cursor: pointer; }
+.denycountryblock {
+border-radius: 10px;
+background: #7f0f0f;
+vertical-align: middle;
+padding: 10px 0 5px;
+margin: 0 0 20px;
+}
+@media (min-width: 640px) {
+.denycountryblock {
+margin: 50px 0 20px;
+}
+}
+.denylogo {
+margin: 15px auto 0;
+display: block;
+}
+.denycountry h1 {
+margin: 15px auto 20px;
+font-weight: 700;
+font-size: 20px;
+text-align: center;
+color: #fff;
+}
+.denycountry p {
+font-size: 14px;
+color: #fff;
+font-weight: bold;
+padding: 0px 20px 10px;
+text-align: center;
+line-height: 18px;
+}
+.denycountry p.sorry {
+line-height: 28px;
+}
+.denycountry p.sorry a {
+color: #D95757;
+font-size: 16px;
+}
+.denycountry p.sorry a:hover {
+color: #fff; }
+.denycountry p.sorry img {
+vertical-align: middle;
+margin: 0px 5px 0 0;
+}
+.denylimiter {
+border: 2px dotted #D95757;
+padding: 0 20px;
+width: calc(100% - 40px);
+margin: 5px auto;
+}
 .licenseimg {
 position: absolute;
 margin-top: -18px;
 margin-left: -103px;
+}
+.depositwindow {
+width: 0px;
+height: 0px;
+display: none;
 }
 .ageimg {
 position: absolute;
@@ -72,6 +147,8 @@ text-overflow: ellipsis;
 white-space: nowrap;
 overflow: hidden;
 }
+#phonemobile,
+#phoneqiwi {display: none; }
 /* Slider */
 .slick-slider {
 position: relative;
@@ -373,7 +450,7 @@ opacity: 1; }
 .slick-slider.tournaments-gallery .slick-dots li.slick-active button:before {
 background: #fad027; }
 .header {
-background: url("/img/bg/bg1.jpg") center 0 no-repeat;
+background: #670D0D url('/img/bg/bg1.jpg') center 0 no-repeat;
 background-size: cover; }
 #wrapper {
 position: relative;
@@ -490,10 +567,10 @@ width: 100%;
 justify-content: center; } }
 .btn-menu {
 display: block;
-background: url("/img/btn/btn-menu.png") 0 0 no-repeat;
+background: url('/img/btn/btn-menu.png') 0 0 no-repeat;
 width: 27px;
 height: 18px;
-margin-right: 30px;
+margin: 0px 25px 0 5px;
 position: relative;
 z-index: 1000;
 -webkit-tap-highlight-color: transparent; }
@@ -504,21 +581,22 @@ border-radius: 5px; }
 .top-nav ul {
 display: flex; }
 .top-nav li {
-margin-right: 27px; }
+margin-right: 5px; }
 .top-nav a {
 display: block;
 font-size: 16px;
 font-weight: bold;
 color: #fff;
 text-decoration: none;
-padding-left: 40px;
-padding-top: 5px;
-padding-bottom: 5px; }
+height: 28px;
+padding: 5px 20px 0 20px;
+line-height: 20px; }
 .top-nav a.casino {
-background: url("/img/ico/ico-1.png") 0 center no-repeat; }
-.top-nav a.rates {
 background: url("/img/ico/ico-2.png") 0 center no-repeat; }
+.top-nav a.rates {
+background: url("/img/ico/ico-1.png") 0 center no-repeat; }
 .top-nav a.switch {
+margin-left: 10px;
 padding: 0; }
 .top-nav li:last-child {
 margin-right: 0; }
@@ -527,7 +605,7 @@ background-position: 100% center;
 padding-left: 0;
 padding-right: 40px; }
 .top-nav li:last-child a.rates {
-padding-right: 60px; }
+padding-right: 50px; }
 @media screen and (max-width: 751px) {
 .account-panel { margin-top: -15px !important; }
 .logoo {width: 100%;}
@@ -624,7 +702,8 @@ transform: translateY(-50%);
 display: block;
 float: right;
 cursor:pointer;
-margin-top: 10px; }
+margin-top: 10px;
+margin-left: -18px; }
 .btn-close:hover {
 background: url('/img/btn/btn-close-hover.png') 0 0 no-repeat; }
 .main-nav {
@@ -751,7 +830,7 @@ border: 1px solid #ededed;
 font-size: 14px;
 color: #333;
 text-align: center;
-padding: 16px; }
+padding: 15px; }
 @media (max-width: 640px) {
 .main table td {
 font-size: 12px;
@@ -940,7 +1019,7 @@ background: #fad027;
 color: #453907; }
 .tournaments .title-block.title-block-green span {
 background: #78ba44;
-font-size: 14px;
+font-size: 16px;
 text-transform: none;
 color: #fff; }
 .tournaments .info {
@@ -950,7 +1029,7 @@ justify-content: space-between; }
 .tournaments .info img {
 display: block; }
 .tournaments .info .title {
-font-size: 30px;
+font-size: 26px;
 font-weight: bold;
 color: #333;
 width: 63%;
@@ -984,7 +1063,7 @@ text-align: center; }
 .tournaments .info .title {
 font-size: 22px; }
 .tournaments .info .fund strong {
-font-size: 24px; } }
+font-size: 20px; } }
 @media screen and (max-width: 840px) {
 .slick-slider.main-gallery .title {
 padding-left: 5%; }
@@ -1026,13 +1105,8 @@ margin-right: 0;
 .timer .holder {
 flex-wrap: wrap;
 justify-content: center; }
-.timer .frame {
-flex-wrap: wrap;
-margin-bottom: 15px; }
 .timer-label {
-text-align: center;
-width: 100%;
-margin-right: 0; }
+margin-right: 5px; }
 .timer .btn {
 margin-right: auto;
 -webkit-tap-highlight-color: transparent; } }
@@ -1329,21 +1403,22 @@ margin-left: 0; } }
 .breadcrumbs {
 margin-top: 7px; }
 .breadcrumbs ul {
-display: flex; }
+display: flex;
+line-height: 24px; }
 .breadcrumbs li {
 align-self: center;
-background: url("/img/ico/ico-arrow-right.png") 100% 2px no-repeat;
+background: url('/img/ico/ico-arrow-right.png') 100% 3px no-repeat;
 padding-right: 21px;
 margin-right: 8px; }
 .breadcrumbs li:last-child {
 background: none;
 padding-right: 0; }
 .breadcrumbs a {
-font-size: 14px;
+font-size: 16px;
 color: #666;
 text-decoration: none; }
 .breadcrumbs span {
-font-size: 30px;
+font-size: 24px;
 font-weight: 700;
 color: #333; }
 .tournament-info {
@@ -1524,6 +1599,7 @@ width: 196px;
 .top-nav li:last-child {
 display: none; } }
 @media screen and (max-width: 1000px) {
+.breadcrumbs li { background: none; padding: 0; }
 .bonusTpl .title {
 font-size: 24px; }
 .bonusTpl .title span {
@@ -1532,6 +1608,7 @@ font-size: 48px; } }
 .bonusTpl .title {
 top: 25px; } }
 @media screen and (max-width: 640px) {
+.breadcrumbs a { display: none; }
 .bonusTpl .btns {
 flex-wrap: wrap; }
 .bonusTpl .btn {
@@ -1593,7 +1670,8 @@ flex-wrap: wrap; }
 .content-nav li {
 width: 100%; } }
 .statuses {
-padding-top: 60px; }
+padding: 0px;
+margin-bottom: -15px; }
 @media screen and (max-width: 1050px) {
 .statuses .col-4 {
 width: 50%; } }
@@ -1602,7 +1680,7 @@ width: 50%; } }
 width: 100%; } }
 .statusTpl {
 background: #fff;
-margin-bottom: 80px;
+margin-top: 50px;
 position: relative;
 -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.03);
 -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.03);
@@ -1623,7 +1701,9 @@ float: left;
 overflow: hidden;
 margin-right: 15px;
 margin-left: -5px;
-border-radius: 120px; }
+border-radius: 120px;
+width: 136px;
+height: 136px; }
 .statusTpl .holder {
 overflow: hidden;
 padding-top: 45px; }
@@ -1632,7 +1712,6 @@ border-bottom: 1px solid #e3e3e3;
 font-size: 24px;
 font-weight: bold;
 color: #333;
-text-transform: uppercase;
 padding-bottom: 12px;
 margin-bottom: 15px; }
 @media (max-width: 640px) {
@@ -1649,8 +1728,10 @@ background: #e1e1e1;
 font-size: 16px;
 color: #333;
 width: 33.3%;
-padding-top: 16px;
-padding-bottom: 16px; }
+padding-top: 15px;
+padding-bottom: 15px; }
+.statusTpl table td {
+padding: 10px; }
 @media (max-width: 640px) {
 .statusTpl table th {
 font-size: 14px;
@@ -1661,19 +1742,17 @@ background: #fad027; }
 display: flex;
 margin-bottom: 10px; }
 .rating li {
-background: url("/img/ico/ico-star.png") 0 0 no-repeat;
-min-width: 23px;
+background: url('/img/ico/ico-star.png') 0 0;
 width: 23px;
 height: 23px;
 margin-right: 8px;
 text-indent: -9999px; }
-@media (max-width: 640px) {
-.rating li {
-width: 18px;
-height: 18px;
-min-width: 18px;
-background-size: 100%;
-margin-right: 2px; } }
+.rating .rating1 { width: 23px; }
+.rating .rating2 { width: 46px; }
+.rating .rating3 { width: 69px; }
+.rating .rating4 { width: 92px; }
+.rating .rating5 { width: 115px; }
+.rating .rating6 { width: 138px; }
 .footer {
 border-top: 5px solid #fad027;
 background: #1d1a1b;
@@ -1711,8 +1790,12 @@ line-height: 41px;
 font-size: 14px;
 padding: 0 11px;
 position: relative;
+margin-bottom: 10px;
 text-align: center;
 color: #d95757; }
+.select-area.margin0{
+margin: 0;
+}
 .select-area.select-select2 .select-opener:after {
 content: "";
 width: 0;
@@ -2569,6 +2652,11 @@ width: 100%; }
 .popup .payments-info .btn {
 width: 100%; } }
 @media (max-width: 640px) {
+.supportpop {
+display: block !important;
+width: 100% !important;
+margin: 0px auto 10px !important;
+max-width: 400px !important; }
 .popup table th {
 display: none; }
 .popup table tr {
@@ -2604,18 +2692,7 @@ display: block; }
 text-align: left;
 margin-top: 10px; }
 .tournament .row > div:first-child {
-min-width: 0; }
-.main table th {
-font-size: 16px;
-padding: 5px 10px; }
-.main table th:first-child {
-font-size: 0; }
-.main table th:first-child:before {
-display: inline-block;
-content: '#';
-font-size: 16px; }
-.main table td {
-padding: 4px !important; } }
+min-width: 0; } }
 .nogames { margin-bottom: 5px !important; text-align: center; }
 .btn-menu {
 background-color: transparent !important;
@@ -2792,6 +2869,10 @@ display: none;
 }
 }
 @media (max-width: 840px) {
+.tournaments .info .fund span {
+text-align: center;
+font-size: 12px;
+}
 .cp-info {
 display: none;
 }
@@ -2800,7 +2881,6 @@ border-right: none;
 }
 }
 @media (max-width: 360px) {
-.btn-menu { position: relative; }
 .ac-btns .open-account { display: none; }
 }
 @media (max-width: 480px) {
@@ -2844,27 +2924,14 @@ margin-bottom: 0px !important;
 }
 .modal-head h2 {
 display: inline-block;
-    font-size: 22px;
+font-size: 22px;
 text-transform: uppercase;
 font-weight: 700;
 color: #fff;
 }
-@media (min-width: 480px) {
-.modal-head h2:before {
-content: '';
-display: inline-block;
-margin-bottom: -8px;
-margin-right: 5px;
-width: 34px;
-height: 34px;
-background: url(/img/ico/help1.png) center no-repeat;
-} }
 .modal-head {
 padding: 0px 0px 15px;
 border-bottom: 1px solid #8D2929;
-}
-.modal-head .btn-close {
-    margin-top: 18px;
 }
 .modal-bod h4 {
 font-size: 14px;
@@ -2885,6 +2952,7 @@ padding-top: 2px;
 border-bottom: 2px solid #922121;
 }
 .modal-bod textarea {
+outline: none;
 resize: none;
 padding: 12px 15px;
 -webkit-box-shadow: none;
@@ -2908,9 +2976,9 @@ border-bottom: 2px solid #FAD027;
 height: 150px;
 }
 .modal-bod button {
-    width: 200px !important;
-    border: none;
-    margin: 20px auto;
+width: 200px !important;
+border: none;
+margin: 20px auto;
 }
 .itemmod {
 width: 33.3333%;
@@ -2930,16 +2998,17 @@ font-size: 14px;
 text-decoration: none;
 }
 .col-md-6 {width: 50%; display: inline-block;
-max-width: 290px;     margin: 0px 0px 10px;}
+max-width: 290px; margin: 0px 0px 10px;}
 .col-md-7 {width: 50%; display: inline-block;
 max-width: 290px; margin: 0px 0px 10px 17px;}
 .col-md-12 {width: 100%; display: block;}
 .row2 { width: 100%; max-width: 600px; overflow: hidden; }
 .col-md-4 { width: 33%; }
 .popup-help {
-width: 100%;
+width: calc(100% - 40px);
 max-width: 640px;
-padding: 10px 20px 20px;
+padding: 20px;
+margin: 20px;
 }
 .row3 {
 display: flex; }
@@ -2948,3 +3017,34 @@ display: flex; }
 .itemmod.margb000 { margin-bottom: 0px !important; }
 .row3 {
 display: block; } }
+#tournaments { margin-bottom: -15px; }
+.modal-bod h4 b { color: #f00; }
+.modal-bod h4 span { color: #FAD027; }
+.loading {
+display: none;
+position: absolute;
+width: 100%;
+height: 100%;
+z-index: 9999;
+background: #690909;
+}
+.loading div {
+width: 48px;
+height: 48px;
+background: url(/img/loading.gif) no-repeat center center;
+position: absolute;
+left: 0;
+right: 0;
+top: 0;
+bottom: 0;
+margin: auto;
+border-radius: 99px;
+}
+.loading span{
+color: #fff;
+display: block;
+text-align: center;
+line-height: 48px;
+font-size: 16px;
+font-weight: bold;
+}
