--- a/src/css/play.css
+++ b/src/css/play.css
@@ -7,7 +7,7 @@ margin: 0;
 padding: 0;
 left:0;
 top:0;
-font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
 }
 body {
 display:inline;
@@ -18,12 +18,12 @@ margin: 0;
 padding: 0;
 left:0;
 top:0;
-background: #0f0f0f;
-font-family: 'Open Sans', sans-serif;
+background: #1d1a1b;
+font-family: 'Roboto', sans-serif;
 }
 #play {
 z-index:99;
-background: #0f0f0f;
+background: #1d1a1b;
 display:inline;
 position:relative;
 width:100%;
@@ -36,10 +36,10 @@ border:none;
 background: url(/img/btn/btn-close.png) center center no-repeat;
     z-index: 999;
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 24px;
-    height: 24px;
+    top: 20px;
+    right: 20px;
+    width: 22px;
+    height: 22px;
     display: block;
     border: 2px solid #A93B3B;
 }
@@ -47,88 +47,22 @@ background: url(/img/btn/btn-close.png) center center no-repeat;
 background:url(/img/btn/btn-close-hover.png) center center no-repeat;
 border: 2px solid #B92C2C;
 }
-.full { background: url(/img/full1.png) 0 0 no-repeat;
+.full { background: url(/img/btn/btn-full.png) center center no-repeat;
 z-index:999;
-position:absolute;
-top:0;
-right:calc(100% - 26px);
-width: 26px;
-height:26px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 22px;
+    height: 22px;
+    display: block;
+    border: 2px solid #A93B3B;
+cursor: pointer;
 }
 .full:hover {
-background:url(/img/full2.png) 0 0 no-repeat;
+background:url(/img/btn/btn-full-hover.png) center center no-repeat;
+border: 2px solid #B92C2C;
 }
-.loading {
-width: 100%;
-height: 100%;
-z-index:9999;
-background: #000 url(/img/loading.gif) center center no-repeat;
-position: absolute;
-background-size: 50px;
-display: block;
-}
-.playformoney {
-width: 100%;
-height: 100%;
-padding: 0;
-display: block;
-margin: 0;
-text-align: center;
-z-index: 9999;
-position: absolute;
-vertical-align: middle;
-background-color: rgba(15, 15, 15, 0.8);
-display: none;
-}
-.playformoney div {
-width: 100%;
-height: 100%;
-max-width: 360px;
-max-height: 215px;
-margin: auto;
-padding: 20px;
-display: block;
-text-align: center;
-background-color: #1d1a1b;
-border-radius: 20px;
-position: absolute;
-top:0;
-bottom:0;
-left:0;
-right:0;
-}
-.playformoney div h5 {
-color: #fff;
-font-size: 20px;
-margin: 0px auto 15px;
-}
-.playformoney div p {
-color: #fff;
-font-size: 14px;
-margin: 0px auto 15px;
-line-height: 14px;
-}
-.playformoney div a {
-margin: 5px auto 10px;
-color: #fff;
-display: inline-block;
-font-size: 16px;
-background: 0 0;
-font-weight: 700;
-border: 2px solid #6de52a;
-padding: 9px 58px;
-position: relative;
-white-space: nowrap;
-text-transform: uppercase;
-text-decoration: none;
-width: 160px;
-}
-.white {
-border: 2px solid #fff !important;
-}
-.playformoney div a:hover {
-color: #6de52a;
-}
+
 .manygames {
 margin: 50px auto 0px;
 color: #fff;
@@ -137,7 +71,7 @@ text-align: center;
 font-weight: 700;
 }
 .manygames a {
-color: #6de52a;
+color: #D95757;
 text-decoration: none; }
 .manygames a:hover {
 text-decoration: underline; }
